test/files/neg/inlineIndyLambdaPrivate/Test_2.scala
class Test {
  def foo = A_1.test
}
